# dokployer

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: ci.yml
src/dokployer/: __main__.py  cli.py  config.py  constants.py  dokploy_client.py  errors.py  inspector.py  logs.py  models.py  stack_deployer.py  template_manager.py
tests/: conftest.py  test_cli.py  test_config.py  test_dokploy_client.py  test_inspector.py  test_logs.py  test_stack_deployer.py  test_template_manager.py
