[project]
name = "dokployer"
version = "0.1.0"
description = "Deploy interpolated Docker Swarm stacks to Dokploy."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "d1ys3nk0" },
]
keywords = ["docker", "dokploy", "deploy", "swarm", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/d1ys3nk0/dokployer"
Repository = "https://github.com/d1ys3nk0/dokployer"
Issues = "https://github.com/d1ys3nk0/dokployer/issues"

[project.scripts]
dokployer = "dokployer.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.4.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.0",
    "mypy>=1.11",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",
    "D203",
    "D213",
    "ISC001",
    "INP001",
    "S310",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",
    "PLR2004",
    "S101",
    "SLF001",
    "TC002",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_concatenate = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q --tb=short --strict-config --strict-markers --maxfail=1"
testpaths = ["tests"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 90

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dokployer"]
include = ["src/dokployer/py.typed"]
